<resources>
    <string name="app_name">TomoCom</string>
    <string name="app_desc">Aplikacja do poznawania nowych ludzi!</string>
    <string name="text_username">Nazwa użytkownika:</string>
    <string name="text_password">Hasło:</string>
    <string name="text_age">Wiek:</string>
    <string name="text_description">Opis:</string>
    <string name="username_desc">Zalecane jest wybranie takiej samej nazwy użytkownika jak w innych aplikacjach.</string>
    <string name="password_desc">Twoje hasło musi się składać z:\n* Ośmiu znaków\n* Jednej wielkiej litery\n* Jednej cyfry\n* Jednego znaku specjalnego (!, @, $, %, ^, *, +, #)</string>
    <string name="username_hint">Twoja nazwa</string>
    <string name="password_hint">Twoje hasło</string>
    <string name="age_hint">Twój wiek</string>
    <string name="image_add">Dodaj znajomego</string>
    <string name="image_skip">Pomiń użytkownika</string>
    <string name="age_desc">Twój wiek jest potrzebny do odblokowania niektórych funkcji aplikacji.</string>
    <string name="interests_desc">Wybierz od trzech do pięciu swoich zainteresowań: </string>
    <string name="picture_desc">Wybierz swoje zdjęcie profilowe: </string>
    <string name="description_desc">Napisz kilka zdań o sobie: </string>
    <string name="sendImage_desc">Send arrow</string>
    <string name="text_email">Adres Email:</string>
    <string name="email_hint">Twój adres Email</string>
    <string name="description_hint">Napisz coś o sobie...</string>
    <string name="text_remind_password">Nie pamiętam hasła</string>
    <string name="text_about">Aplikacja napisana przez Daniela Ratkowskiego w ramach pracy inżynierskiej: <b>\"Projekt i implementacja aplikacji do poznawania ludzi z podobnymi zainteresowaniami dla systemu Android\"</b>  </string>

    <!--BUTTONS-->
    <string name="button_login">Zaloguj się</string>
    <string name="button_next">Dalej</string>
    <string name="button_start">Zaczynamy</string>
    <string name="button_register">Załóż konto</string>
    <string name="button_signUp">Zarejestruj się</string>
    <string name="button_sendLike">Wyślij polubienie</string>
    <string name="button_startChat">Rozpocznij chat</string>
    <string name="button_deleteFriend">Usuń znajomego</string>
    <string name="button_skip">Pomiń</string>
    <string name="button_save">Zapisz</string>
    <string name="button_choose_picture">Wybierz zdjęcie</string>
    <string name="button_reset_password">Resetuj hasło</string>

    <!--CARDS-->
    <string name="card_age">Wiek:  </string>
    <string name="card_interests">Zainteresowania: </string>
    <string name="card_time">00:00</string>

    <!--CHECKBOXES-->
    <string name="t_games">Gry</string>
    <string name="t_dancing">Taniec</string>
    <string name="t_fashion">Moda</string>
    <string name="t_shows">Seriale</string>
    <string name="t_travelling">Podróżowanie</string>
    <string name="t_art">Sztuka</string>
    <string name="t_sport">Sport</string>
    <string name="t_animals">Zwierzęta</string>
    <string name="t_cooking">Gotowanie</string>
    <string name="t_movies">Filmy</string>
    <string name="t_anime">Anime</string>
    <string name="t_music">Muzyka</string>
    <string name="t_nature">Przyroda</string>
    <string name="t_programming">Programowanie</string>
    <string name="t_onlineGames">Gry Online</string>
    <string name="t_manga">Manga</string>
    <string name="t_gym">Siłownia</string>
    <string name="t_writing">Pisarstwo</string>
    <string name="t_fitness">Fitness</string>
    <string name="t_outdoors">Spędzanie czasu\n na zewnątrz</string>
    <string name="t_concerts">Koncerty</string>
    <string name="t_science">Nauka</string>
    <string name="t_books">Książki</string>
    <string name="t_camping">Camping</string>
    <string name="t_boardGames">Gry planszowe</string>
    <string name="t_fishing">Wędkarstwo</string>
    <string name="t_hiking">Turystyka\n piesza</string>

    <!--BOTTOM NAV-->
    <string name="nav_friends">Znajomi</string>
    <string name="nav_settings">Ustawienia</string>
    <string name="nav_find">Szukaj ludzi</string>
    <string name="nav_profile">Profil</string>

    <!--SETTINGS PREFERENCES -->
    <string name="settings_title_general">Ogólne</string>
    <string name="settings_title_notifications">Powiadomienia</string>
    <string name="settings_title_misc">Różne</string>
    <string name="settings_about">O nas</string>
    <string name="settings_mode">Tryb ciemny</string>
    <string name="settings_signature">Twoja sygnatura</string>
    <string name="settings_match">Minimalny poziom dopasowania</string>
    <string name="settings_push">Powiadomienia Push</string>
    <string name="settings_sound">Dźwięki powiadomień</string>
    <string name="settings_skip_summary">Pomija użytkownika po wyjściu z profilu</string>
    <string name="settings_skip">Pomiń użytkownika</string>
    <string name="settings_age">Minimalny wiek dopasowanych użytkowników</string>
    <string name="settings_logout">Wyloguj</string>

    <!--PROFILE PREFERENCES -->
    <string name="profile_username">Nazwa użytkownika</string>
    <string name="profile_title">Ustawienia użytkownika</string>
    <string name="profile_delete">Usuń konto</string>
    <string name="profile_change_interests">Zmień zainteresowania</string>
    <string name="profile_change_picture">Zmień zdjęcie profilowe</string>
    <string name="profile_change_description">Zmień opis</string>

    <!--MORE MENU -->
    <string name="menu_remove">Usuń znajomego</string>
    <string name="menu_remove_skip">Usuń i pomiń znajomego</string>

    <!--CHAT-->
    <string name="chat_enter_message">Wpisz wiadomość</string>
    <string name="chat_send_message">Wyślij</string>

    <!--PLACEHOLDERS-->
    <string name="placeholder_username">nazwa</string>
    <string name="placeholder_description">opis</string>
    <string name="placeholder_message">wiadomość</string>
    <string name="placeholder_date">00:00</string>

    <!--MISC-->
    <string name="misc_chat_with">Chat z użytkownikiem </string>
    <string name="match_level">Dopasowanie:</string>
    <string name="friends">Znajomi:</string>
    <string name="matched_people">Dopasowani ludzie:</string>
    <string name="profile_image_desc">Profile Image</string>
    <string name="text_empty_recycler_find">Brak dobranych ludzi.\n Zmień ustawienia lub poczekaj na nowych użytkowników.</string>
    <string name="text_empty_recycler_friends">Brak znajomych.\n Przejdź do zakładki <b>Szukaj ludzi</b> aby znaleźć nowych znajomych!</string>
    <string name="searchicon">searchIcon</string>
    <string name="friendsicon">friendsIcon</string>
    <string name="profile_clear">Wyczyść listę pominiętych użytkowników.</string>

</resources>