<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settings_title_general">

        <SwitchPreferenceCompat
            app:key="mode"
            app:title="@string/settings_mode" />

        <SwitchPreferenceCompat
            app:key="skip"
            app:summary="@string/settings_skip_summary"
            app:title="@string/settings_skip" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/settings_reply"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_title_notifications">

        <SwitchPreferenceCompat
            app:key="push"
            app:title="@string/settings_push" />

        <SwitchPreferenceCompat
            app:dependency="push"
            app:key="sound"
            app:title="@string/settings_sound" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_title_misc">

        <Preference
            app:title="@string/settings_about"
            app:key="about"
            app:icon="@drawable/settings_info"/>

        <Preference
            app:title="@string/settings_logout"
            app:key="logout"
            app:icon="@drawable/settings_logout"/>

    </PreferenceCategory>

</PreferenceScreen>