<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InterestSelectorActivity">

    <TextView
        android:id="@+id/chooseinterestsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/interests_desc"
        android:textSize="24sp" />

    <GridLayout
        android:id="@+id/interestsGridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/chooseinterestsTV"
        android:layout_marginTop="25dp"
        android:alignmentMode="alignMargins"
        android:columnCount="3"
        android:columnOrderPreserved="false"
        android:padding="16dp">

        <CheckBox
            android:id="@+id/dancingCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_dancing" />

        <CheckBox
            android:id="@+id/fashionCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_fashion" />

        <CheckBox
            android:id="@+id/showsCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_shows" />

        <CheckBox
            android:id="@+id/travellingCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_travelling" />

        <CheckBox
            android:id="@+id/artCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_art" />

        <CheckBox
            android:id="@+id/gamesCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_games" />

        <CheckBox
            android:id="@+id/sportCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_sport" />

        <CheckBox
            android:id="@+id/animalsCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_animals" />

        <CheckBox
            android:id="@+id/cookingCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_cooking" />

        <CheckBox
            android:id="@+id/moviesCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_movies" />

        <CheckBox
            android:id="@+id/animeCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_anime" />

        <CheckBox
            android:id="@+id/mangaCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_manga" />

        <CheckBox
            android:id="@+id/musicCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_music" />

        <CheckBox
            android:id="@+id/programmingCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_programming" />

        <CheckBox
            android:id="@+id/natureCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_nature" />

        <CheckBox
            android:id="@+id/onlineGamesCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_onlineGames" />

        <CheckBox
            android:id="@+id/gymCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_gym" />

        <CheckBox
            android:id="@+id/writingCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_writing" />

        <CheckBox
            android:id="@+id/fitnessCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_fitness" />

        <CheckBox
            android:id="@+id/outdoorsCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_outdoors" />

        <CheckBox
            android:id="@+id/concertsCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_concerts" />

        <CheckBox
            android:id="@+id/scienceCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_science" />

        <CheckBox
            android:id="@+id/booksCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_books" />

        <CheckBox
            android:id="@+id/campingCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_camping" />

        <CheckBox
            android:id="@+id/boardGamesCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_boardGames" />

        <CheckBox
            android:id="@+id/fishingCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_fishing" />

        <CheckBox
            android:id="@+id/hikingCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_hiking" />

    </GridLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="383dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/button_next"
        app:cornerRadius="5dp" />


</RelativeLayout>