<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/profile_title">

        <EditTextPreference
            app:key="username"
            app:title="@string/profile_username"
            app:defaultValue="User"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:title="@string/profile_change_picture"
            app:key="change" />

        <Preference
            app:title="@string/profile_change_interests"
            app:key="interests" />

        <Preference
            app:title="@string/profile_delete"
            app:key="delete" />

    </PreferenceCategory>
</PreferenceScreen>