<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="383dp"
        android:layout_height="39dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/text_email"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="383dp"
        android:layout_height="39dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/emailTV"
        android:ems="10"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/usernameTV"
        android:layout_width="383dp"
        android:layout_height="39dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/email"
        android:text="@string/text_username"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/usernameTV"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/usernameInfoTV"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/username"
        android:text="@string/username_desc"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/ageTV"
        android:layout_width="383dp"
        android:layout_height="39dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/usernameInfoTV"
        android:text="@string/text_age"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/age"
        android:layout_width="383dp"
        android:layout_height="39dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ageTV"
        android:ems="10"
        android:hint="@string/age_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:digits="0123456789"/>

    <TextView
        android:id="@+id/ageInfoTV"
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/age"
        android:text="@string/age_desc"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/passwordTV"
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ageInfoTV"
        android:text="@string/text_password"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="383dp"
        android:layout_height="39dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/passwordTV"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/passwordInfoTV"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password"
        android:text="@string/password_desc"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <ProgressBar
        android:id="@+id/signUpProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordInfoTV"
        android:layout_above="@+id/registerButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:visibility="invisible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="382dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/button_register"
        app:cornerRadius="5dp" />


</RelativeLayout>