<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="277dp"
        android:layout_height="62dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:layout_below="@+id/titleTV"
        android:text="@string/app_desc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        android:layout_width="267dp"
        android:layout_height="63dp"
        android:layout_marginTop="200dp"
        android:layout_above="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:text="@string/button_start"
        app:cornerRadius="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="267dp"
        android:layout_height="62dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_login"
        app:cornerRadius="5dp" />


</RelativeLayout>