<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatFragment">

    <TextView
        android:id="@+id/usernameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/misc_chat_with"
        android:textSize="25sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/usernameTV"
        android:layout_above="@+id/relativeLayout"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/chat_enter_message"
            android:inputType="text"
            android:maxLines="6"
            tools:ignore="AutoFill" />

        <ImageButton
            android:id="@+id/sendMessageButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignEnd="@+id/messageEditText"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/sendImage_desc"
            android:text="@string/chat_send_message"
            android:textColor="@color/design_default_color_primary"
            app:srcCompat="@android:drawable/ic_menu_send" />

    </RelativeLayout>


</RelativeLayout>